src/objects/sdfs__FormulaShare_Metrics__c.object
<CustomObject>
    <description>Holds internal information used to measure rule processing</description>
    <fields>
        <fullName>sdfs__Context__c</fullName>
        <label>Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Failed_Inserts__c</fullName>
        <label>Failed Inserts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__FormulaShare_Rule_Name__c</fullName>
        <label>FormulaShare Rule Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Last_Batch_Run__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Batch Run</label>
        <referenceTo>sdfs__FormulaShare_Log__c</referenceTo>
        <relationshipLabel>FormulaShare Metrics</relationshipLabel>
        <relationshipName>FormulaShare_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sdfs__Last_Failed_Batch__c</fullName>
        <label>Last Failed Batch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdfs__Last_Failed_Operation__c</fullName>
        <label>Last Failed Operation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdfs__Last_Successful_Batch__c</fullName>
        <label>Last Successful Batch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdfs__Last_Successful_Operation__c</fullName>
        <label>Last Successful Operation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sdfs__Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Successful_Inserts__c</fullName>
        <label>Successful Inserts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FormulaShare Metrics</label>
    <nameField>
        <displayFormat>FSM-{0000000}</displayFormat>
        <label>FormulaShare Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormulaShare Metrics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>